# qi-os

./: .gitignore  Cargo.toml  NOTES.md  README.md  bootloader.ld  build.rs  kernel.ld  rust-toolchain.toml  userland.ld
.cargo/: config.toml
boot/: a20.asm  load-kernel.asm  os.asm  stage2.asm  test
boot-asm/: Makefile  os.asm  stage2.asm  test
bootloader/: Cargo.toml  build.rs  x86_64-stage-3.json
bootloader/asm/: cpu-checks.asm  gdt.asm  graphics.asm  hwinfo.asm  load-disk.asm  os.asm  paging.asm  stage1.asm  stage2.asm
bootloader/src/: lib.rs  main.rs  memory.rs  printer.rs
common/: Cargo.toml
common/src/: lib.rs
kernel/: Cargo.toml  build.rs  process.md
kernel/src/: allocator.rs  gdt.rs  graphics.rs  heap.rs  interrupts.rs  lib.rs  lock.rs  main.rs  memory.rs  mouse.rs  pit.rs  proc.rs  serial.rs  switch.s  thread.rs  time.rs  vga_buffer.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs  mouse.rs  tty.rs
qi-boot/: Cargo.toml
src/: allocator.rs  board.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  piece.rs  position.rs  vga_buffer.rs
src/asm/: hello.asm  os.asm  stage1.asm  stage2.asm  test
src/task/: executor.rs  keyboard.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
userland/: Cargo.toml  build.rs
userland/src/: lib.rs
