[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bitflags = "2.11.0"
embedded-graphics = "0.8.2"
linked_list_allocator = "0.9.0"
pc-keyboard = "0.7.0"
pic8259 = "0.10.1"
spin = "0.5.2"
uart_16550 = "0.2.0"
volatile = "0.2.6"
x86_64 = "0.14.2"
log = { version = "0.4.17", default-features = false }
userland = { path = "../userland", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies.elf]
version = "0.8.0"
default-features = false

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3.11"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[build-dependencies]
cc = "1.0"
